--- a/others/grade/index.html
+++ b/others/grade/index.html
@@ -7,6 +7,10 @@
 	<table>
 		<caption>专业课成绩单</caption>
 		<tr>
+			<th>课程名</th>
+			<th>分数/总分</th>
+		</tr>
+		<tr>
 			<td>Web技术基础</td>
 			<td>90/100</td>
 		</tr>
