--- a/Drag(oop)/index.html
+++ b/Drag(oop)/index.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/css.css" />
 </head>
 <body>
-	向边界拖拽两个方块 <br /><br />
+	<p>面向对象拖拽</p>
+	<p>向边界拖拽两个方块</p><br />
 	
 	<div id="div1">Drag</div>
 	<div id="div2">LimitDrag</div>
