--- a/sendComment/index.html
+++ b/sendComment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>发微博</title>
+	<title>发微博(链式运动)</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="styles/css.css" />
 </head>
