--- a/Pet/about.html
+++ b/Pet/about.html
@@ -21,24 +21,31 @@
 	</header>
 	<article>
 		<h1>About</h1>
-		<nav>
+		<nav id="ab">
 			<ul>
-				<li><a href="#aaa">AAAAA</a></li>
-				<li><a href="#bbb">BBBBBB</a></li>
+				<li><a href="#ab1">关于我们</a></li>
+				<li><a href="#ab2">about</a></li>
 			</ul>
 		</nav>
-		<section id="aaa">
-			<h3>AAAAA</h3>
-			<p>aaaaaa sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
-			<p>aaaaaa sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
-			<p>aaaaaa sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
-			<p>bbbbb sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
+		<section id="ab1">
+			<h2>关于我们</h2>
+			<p>我在翠绿的稻田中<br />
+				凝视远方落下的太阳<br />
+				你在蔚蓝的天空下<br />
+				抬头看着飘来的云裳<br />
+				音乐在我耳中回荡<br />
+				影子在我身后拉长<br />
+			</p>
 		</section>
-		<section id="bbb">
-			<h3>BBBBBB</h3>
-			<p>bbbbb sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
-			<p>bbbbb sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
-			<p>bbbbb sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. sadf lncnejr ds kcm onfaksdm, cesadf lncnejr ds kcm onfakasmc, nfaskdcm. </p>
+		<section id="ab2">
+			<h2>about</h2>
+			<p>I'm in the green fields<br />
+				Gazing at the distant sun<br />
+				You're under the blue sky<br />
+				Looked up at the floated Ella<br />
+				Music in my ears<br />
+				The shadows stretched behind me<br />
+			</p>
 		</section>
 	</article>
 
