--- a/myXimi/ximi.html
+++ b/myXimi/ximi.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>ximi</title>
-	<link rel="stylesheet" type="text/css" href="ximi.css" />
+	<link rel="stylesheet" type="text/css" href="styles/ximi.css" />
 </head>
 <body>
 <!-- 导航条开始 -->
@@ -58,7 +58,7 @@
 
 	<!-- 中间内容区开始 -->
 		<div class="con-c">
-			<div class="opa"></div>
+			<div class="opa">相信我们，不会让您失望</div>
 		</div>
 	<!-- 中间内容区结束 -->
 	
