--- a/OASystem/OA/WebContent/index.html
+++ b/OASystem/OA/WebContent/index.html
@@ -213,7 +213,7 @@
 		<section id="advisement" class=" box-1 box-content box-2 box-style"  style="margin-top:200px;">
 			<div class="container">
 				<div class="row">
-					<blockquote>只要一万五千八,代码大神带回家。</blockquote>
+					<blockquote>给我一次机会，还你一个奇迹！</blockquote>
 				</div>		
 			</div>
 		</section>
@@ -234,9 +234,9 @@
 	<!-- /////////////////////////////////////////Footer -->
 		<!-- 底部开始 -->
 	<footer class="text-center" style="background:#252525;color:#eee;padding:50px 0; height:200px; margin-top:100px;">
-		<p>大连中心：(86-411)84755574  沈阳中心：(86-24)22512500  公司传真：(86-411)84755568</p>
-		<p>地址：辽宁省大连市高新园区宏川东路20号黄泥川天地软件园金枫楼三层</p>
-		<p>Copyright 2009-2014 dletc.com.cn all rights reserved 网站备案号 : 辽ICP备09019147号-1</p>
+		<p>大连中心：(+86)88888888</p>
+		<p>地址：辽宁省大连市大连民族大学金石滩校区</p>
+		<p>Copyright 2009-2014 dlnu.com.cn all rights reserved 网站备案号 : 辽ICP备00000000号-1</p>
 	</footer>
 	<!-- 底部结束 -->
 	<!-- Footer -->
