--- a/resume/web前端开发-孔令囡.html
+++ b/resume/web前端开发-孔令囡.html
@@ -5,7 +5,7 @@
     <title>web前端开发-孔令囡</title>
     <base target="_blank" />
 	<style id="system" type="text/css">
-		h1,h2,h3,h4,h5,h6,p,blockquote {
+		h1, h2, h3, h4, h5, h6, p, ul, blockquote {
 			margin: 0;
 			padding: 0;
 		}
@@ -28,7 +28,7 @@
 			border: none;
 		}
 		p {
-			margin-bottom: 9px;
+			margin-bottom: 6px;
 		}
 		#copyright {
 			text-align: center;
@@ -86,7 +86,6 @@
 			margin-right: 5px;
 		}
 		ul {
-			margin: 0;
 			padding-left: 20px;
 		}
 		.two {
@@ -99,6 +98,9 @@
 		.three h3, .three p {
 			float: left;
 		}
+		.bold {
+			font-weight: 600;
+		}
 		@media screen and (min-width: 768px) {
 			body { 
 				width: 748px;
@@ -107,11 +109,11 @@
 		}
 		@font-face {
 		  font-family: 'contact';
-		  src:  url('fonts/contact.eot?eg9lpu');
-		  src:  url('fonts/contact.eot?eg9lpu#iefix') format('embedded-opentype'),
-		    url('fonts/contact.ttf?eg9lpu') format('truetype'),
-		    url('fonts/contact.woff?eg9lpu') format('woff'),
-		    url('fonts/contact.svg?eg9lpu#contact') format('svg');
+		  src:  url('https://konglingnan.github.io/resume/fonts/contact.eot?eg9lpu');
+		  src:  url('https://konglingnan.github.io/resume/fonts/contact.eot?eg9lpu#iefix') format('embedded-opentype'),
+		    url('https://konglingnan.github.io/resume/fonts/contact.ttf?eg9lpu') format('truetype'),
+		    url('https://konglingnan.github.io/resume/fonts/contact.woff?eg9lpu') format('woff'),
+		    url('https://konglingnan.github.io/resume/fonts/contact.svg?eg9lpu#contact') format('svg');
 		  font-weight: normal;
 		  font-style: normal;
 		}
@@ -166,7 +168,7 @@
 	<hr />
 	<blockquote>
 		<div>
-			<img src="kln.jpg" alt="konglingnan" />
+			<img src="https://konglingnan.github.io/resume/kln.jpg" alt="konglingnan" />
 		</div>
 		<div>
 			<p>
@@ -212,9 +214,11 @@
 
 	<p>（使用技术：HTML5 CSS3 JavaScript jQuery Java MySQL）</p>
 	<p>
-		<b>项目描述：</b>该平台包括首页、课程、计划、分享、社区几个模块。
-		网站为响应式布局，适配移动端。<br />
-		<b>前端部分：</b>
+		<sapn class="bold">项目描述：</sapn>该平台包括首页、课程、计划、分享、社区几个模块。
+		网站为响应式布局，适配移动端。
+	</p>
+	<p>
+		<sapn class="bold">前端部分：</sapn>
 		<ul type="circle">
 			<li>通过HTML5，CSS3，JavaScript，jQuery进行页面的处理。</li>
 		<li>轮播图借助jQuery选择器由原生js实现。</li>
@@ -222,24 +226,34 @@
 		<li>登录模块使用了HTML5的sessionStorage存储方式，页面中多处过渡效果使用了CSS3的transition属性。</li>
 		<li>使用ajax进行前端与后台数据的交互。</li>
 		</ul>
+	</p>
+	<p>
 		后台：使用Java将接口提供给前端。用户在前端点击不同类型后，数据传给后台，后台通过查询数据库可返回相应数据，切换课程。<br />
-		数据库：使用MySQL。<br />
-		<b>项目职责：</b>个人独立完成
+		数据库：使用MySQL。
+	</p>
+	<p>
+		<sapn class="bold">项目职责：</sapn>个人独立完成
 	</p>
 	<h5><a href="https://konglingnan.github.io/OASystem/OA/WebContent/index.html">企业OA系统</a> (2016.12.8-2016.12.30)<a href="https://konglingnan.github.io/OASystem/OA/WebContent/index.html" style="float: right;">https://konglingnan.github.io/OASystem</a></h5>
 	<p>（使用技术：HTML5 CSS3 JavaScript jQuery Bootstrap Java Oracle）</p>
 	<p>
-		<b>项目描述：</b>
+		<sapn class="bold">项目描述：</sapn>
 		利用三层框架技术开发一个企业OA系统网站。
-		该平台提供企业管理服务的一系列服务，包括提供登录，查询员工信息，车辆管理等各种功能不同的模块。<br />
-		<b>前端：</b>
+		该平台提供企业管理服务的一系列服务，包括提供登录，查询员工信息，车辆管理等各种功能不同的模块。
+	</p>
+	<p>
+		<sapn class="bold">前端：</sapn>
 		<ul type="circle">
 			<li>通过HTML5，CSS3，JavaScript进行页面的处理，并且使用Bootstrap作为搭建框架。</li>
 			<li>通过AngualrJS进行与后台数据的绑定。</li>
 		</ul>
+	</p>
+	<p>
 		后台：使用java将接口提供给前端。<br />
-		数据库：使用Oracle。<br />
-		<b>项目职责：</b>个人独立完成
+		数据库：使用Oracle。
+	</p>
+	<p>
+		<sapn class="bold">项目职责：</sapn>个人独立完成
 	</p>
 	<h5>
 		（更多请看 <a href="https://github.com/konglingnan/">github</a>）
