--- a/muke/MUKE/WebContent/course.html
+++ b/muke/MUKE/WebContent/course.html
@@ -170,7 +170,7 @@
 						</li>
 						<li>
 							<div>1小时27分钟 | 初级</div>
-							<a href="javascript:void(0);"><img src="imgs/2.jpg" />
+							<a href="javascript:void(0);"><img src="http://oueky2f09.bkt.clouddn.com/2.jpg" />
 								<h3>CSS基础课程</h3>
 								<p>87分钟带领大家掌握CSS基本样式</p>
 								<span>更新完毕</span>&nbsp;&nbsp;&nbsp;&nbsp;<span>4499832人在学习</span>
