--- a/others/grade/index.html
+++ b/others/grade/index.html
@@ -11,8 +11,16 @@
 			<th>分数/总分</th>
 		</tr>
 		<tr>
+			<td>专业方向实训</td>
+			<td>94/100</td>
+		</tr>
+		<tr>
 			<td>Web技术基础</td>
 			<td>90/100</td>
+		</tr>
+		<tr>
+			<td>前端框架技术</td>
+			<td>88/100</td>
 		</tr>
 		<tr>
 			<td>Java语言</td>
@@ -33,6 +41,10 @@
 		<tr>
 			<td>数据结构与算法</td>
 			<td>95/100</td>
+		</tr>
+		<tr>
+			<td>计算机网络</td>
+			<td>94/100</td>
 		</tr>
 		<tr>
 			<td>操作系统</td>
