--- a/OASystem/OA/WebContent/UpdateInventorytype.html
+++ b/OASystem/OA/WebContent/UpdateInventorytype.html
@@ -6,7 +6,7 @@
 	<!-- 视口设置 -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 	<!-- 引入bootstrap的css文件 -->
-	<link rel="stylesheet" type="text/css" href="js/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="js/bootstrap/css/bootstrap.min.css">
     <!-- 引入jquery的js文件 -->
     <script type="text/javascript" src="files/jquery.js"></script>
     <link rel="stylesheet" href="css/leftmenu.css" media="screen" type="text/css">
@@ -115,7 +115,7 @@
 	<!-- 引入jquery的js文件 -->
 	<script type="text/javascript" src="js/bootstrap/js/jquery.js"></script>
 	<!-- 引入bootstrap的js文件 -->
-	<script type="text/javascript" src="js/bootstrap/js/bootstrap.js"></script>	
+	<script type="text/javascript" src="js/bootstrap/js/bootstrap.min.js"></script>	
 	<!-- 引入angularjs的js文件 -->
 	<script type="text/javascript" src="js/angularjs/angular.js"></script>
 	<!-- 引入全局配置js -->
