--- a/muke/MUKE/WebContent/index.html
+++ b/muke/MUKE/WebContent/index.html
@@ -12,8 +12,8 @@
 		<link rel="stylesheet" href="styles/index.css" />
 
 		<!-- 滚屏动画插件 -->
-		<script type="text/javascript" src="js/wow/wow.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/wow/animate.css">
+		<script type="text/javascript" src="js/wow/wow.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/wow/animate.min.css">
 		<!-- bootstrap插件 -->
 		<!-- 轮班插件 -->
 		<script src="js/swiper/swiper.min.js"></script>
@@ -333,7 +333,7 @@
 		<!-- goto部分end -->
 
 
-		<script src="js/bootstrap.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="scripts/base.js"></script>
 		<script src="scripts/index.js"></script>
 	</body>
