--- a/muke/MUKE/WebContent/index.html
+++ b/muke/MUKE/WebContent/index.html
@@ -94,7 +94,7 @@
 		<!-- 轮播图部分start -->
 		<div class="slider">
 			<ul class="bigImgs">
-				<li><a href="javascript:void(0);"><img src="imgs/slider1.jpg" /></a></li>
+				<li><a href="javascript:void(0);"><img src="http://oueky2f09.bkt.clouddn.com/slider1.webp" /></a></li>
 				<li><a href="javascript:void(0);"><img src="imgs/slider2.jpg" /></a></li>
 				<li><a href="javascript:void(0);"><img src="imgs/slider3.jpg" /></a></li>
 			</ul>
