--- a/OASystem/OA/WebContent/QueryDised.html
+++ b/OASystem/OA/WebContent/QueryDised.html
@@ -6,7 +6,7 @@
 	<!-- 视口设置 -->
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 	<!-- 引入bootstrap的css文件 -->
-	<link rel="stylesheet" type="text/css" href="js/bootstrap/css/bootstrap.min.min.css">
+	<link rel="stylesheet" type="text/css" href="js/bootstrap/css/bootstrap.min.css">
     <!-- 引入jquery的js文件 -->
     <script type="text/javascript" src="files/jquery.js"></script>
     <link rel="stylesheet" href="css/leftmenu.css" media="screen" type="text/css">
