--- a/muke/MUKE/WebContent/community.html
+++ b/muke/MUKE/WebContent/community.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/swiper/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="css/wow/animate.css">
-
 	<link rel="stylesheet" href="styles/base.css" />
-	<link rel="stylesheet" href="styles/community.css" />
-		
+	<link rel="stylesheet" href="styles/community.css" />	
+	<link rel="stylesheet" type="text/css" href="styles/loginstyle.css">
+
 	<!-- bootstrap插件 -->
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -27,8 +27,6 @@
 	<![endif]-->
 
 	<title>慕课网</title>
-
-		<link rel="stylesheet" type="text/css" href="styles/loginstyle.css">
 
 </head>
 <body>
@@ -340,7 +338,7 @@
 	<!-- goto部分end -->
 
 
-	<script src="scripts/base.js"></script>
-	<script src="scripts/index.js"></script>
+	<script src="scripts/base-min.js"></script>
+	<script src="scripts/index-min.js"></script>
 </body>
 </html>
