--- a/muke/MUKE/WebContent/course.html
+++ b/muke/MUKE/WebContent/course.html
@@ -290,7 +290,7 @@
 
 		
 		<script src="js/bootstrap.js"></script>
-		<script src="scripts/base.js"></script>
-		<script src="scripts/index.js"></script>
+		<script src="scripts/base-min.js"></script>
+		<script src="scripts/index-min.js"></script>
 	</body>
 </html>
