--- a/muke/MUKE/WebContent/index.html
+++ b/muke/MUKE/WebContent/index.html
@@ -334,7 +334,7 @@
 
 
 		<script src="js/bootstrap.min.js"></script>
-		<script src="scripts/base.js"></script>
-		<script src="scripts/index.js"></script>
+		<script src="scripts/base-min.js"></script>
+		<script src="scripts/index-min.js"></script>
 	</body>
 </html>
