--- a/muke/MUKE/WebContent/share.html
+++ b/muke/MUKE/WebContent/share.html
@@ -286,6 +286,6 @@
 
 
 		<script src="js/bootstrap.js"></script>
-		<script src="scripts/base.js"></script>
+		<script src="scripts/base-min.js"></script>
 	</body>
 </html>
