--- a/OASystem/OA/WebContent/header.html
+++ b/OASystem/OA/WebContent/header.html
@@ -6,11 +6,9 @@
     <title>OA系统</title>
     <!-- 视口设置 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <!-- 引入bootstrap的css文件 -->
-    <link rel="stylesheet" type="text/css" href="js/bootstrap/css/bootstrap.min.css">
-    <!-- 引入jquery的js文件 -->
-    <script type="text/javascript" src="files/jquery.js"></script>
 
+    <script type="text/javascript" src="files/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/bootstrap/css/bootstrap.min.css">
 	<style type="text/css">
 		.jumbotron{
 			height:400px;
@@ -20,7 +18,7 @@
 </head>
 <body>
 
-	<div class="jumbotron"  style="background-image:url('images/jumu2.jpg'); background-size:cover; margin-top:50px;">
+	<div class="jumbotron"  style="background-image:url('images/jumu2.webP'); background-size:cover; margin-top:50px;">
         <p class="pull-right">
            	<button type="button" class="btn btn-success btn-sm">到巨幕</button>
         </p>
