--- a/muke/MUKE/WebContent/share.html
+++ b/muke/MUKE/WebContent/share.html
@@ -285,7 +285,7 @@
 		<!-- goto部分end -->
 
 
-		<script src="js/bootstrap.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="scripts/base-min.js"></script>
 	</body>
 </html>
