--- a/muke/MUKE/WebContent/course.html
+++ b/muke/MUKE/WebContent/course.html
@@ -288,8 +288,7 @@
 		</div>
 		<!-- goto部分end -->
 
-		
-		<script src="js/bootstrap.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="scripts/base-min.js"></script>
 		<script src="scripts/index-min.js"></script>
 	</body>
