--- a/muke/MUKE/WebContent/plan.html
+++ b/muke/MUKE/WebContent/plan.html
@@ -272,7 +272,7 @@
 		<!-- goto部分end -->
 
 
-		<script src="js/bootstrap.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="scripts/base-min.js"></script>
 		<script src="scripts/index-min.js"></script>
 	</body>
