--- a/OASystem/OA/WebContent/header.html
+++ b/OASystem/OA/WebContent/header.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-	<div class="jumbotron"  style="background-image:url('images/jumu2.webP'); background-size:cover; margin-top:50px;">
+	<div class="jumbotron"  style="background-image:url('images/jumu2.jpg'); background-size:cover; margin-top:50px;">
         <p class="pull-right">
            	<button type="button" class="btn btn-success btn-sm">到巨幕</button>
         </p>
