--- a/resume/web前端开发-孔令囡.html
+++ b/resume/web前端开发-孔令囡.html
@@ -209,7 +209,7 @@
 	</ul>
 	<hr />
 	<h3>项目经验</h3>
-	<h5><a href="https://konglingnan.github.io/muke/MUKE/WebContent/index.html">慕课网仿站</a> (2017.6.13-2017.6.22)<a href="https://konglingnan.github.io/muke/MUKE/WebContent/index.html" style="float: right;">https://konglingnan.github.io/Muke</a></h5>
+	<h5><a href="https://konglingnan.github.io/Muke/">慕课网仿站</a> (2017.6.13-2017.6.22)<a href="https://konglingnan.github.io/Muke/" style="float: right;">https://konglingnan.github.io/Muke/</a></h5>
 
 	<p>（使用技术：HTML5 CSS3 JavaScript jQuery Java MySQL）</p>
 	<p>
@@ -233,7 +233,7 @@
 	<p>
 		<sapn class="bold">项目职责：</sapn>承担主页、登录注册、课程、计划、分享前端页面的编写，及登录注册、课程、计划几个模块的数据交互和后台代码编写，数据库建表，项目整合。
 	</p>
-	<h5><a href="https://konglingnan.github.io/OASystem/OA/WebContent/index.html">企业OA系统</a> (2016.12.8-2016.12.30)<a href="https://konglingnan.github.io/OASystem/OA/WebContent/index.html" style="float: right;">https://konglingnan.github.io/OASystem</a></h5>
+	<h5><a href="https://konglingnan.github.io/OASystem/">企业OA系统</a> (2016.12.8-2016.12.30)<a href="https://konglingnan.github.io/OASystem/" style="float: right;">https://konglingnan.github.io/OASystem/</a></h5>
 	<p>（使用技术：HTML5 CSS3 JavaScript Bootstrap Java Oracle）</p>
 	<p>
 		<sapn class="bold">项目描述：</sapn>
