--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
 ﻿<html>
 <head>
-	<title>JQuery</title>
-	<link rel="stylesheet" type="text/css" href="styles/css.css" />
+	<title>welcome </title>
+	<style>
+		h1 {
+			margin: 300px auto;
+		}
+	</style>
 </head>
 <body>
-
+	
 	<h1>Welcome!</h1>
 
-
-
-    <!-- CDN -->
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.min.js"></script>  
-
-    <!-- CDN未能成功引用时的备用 -->
-    <script>
-        // Fallback to loading jQuery from a local path if the CDN is unavailable
-        (window.jQuery || document.write('<script src="/scripts/jquery-3.1.1.js"><\/script>'));
-    </script>
-
-	<!-- 正常引入本地的库 -->
-	<!-- <script type="text/javascript" src="scripts/jquery-3.1.1.js"></script> -->
-	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
