--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-﻿<html>
+<html>
 <head>
 	<title>welcome </title>
 	<style>
 		h1 {
-			margin: 300px auto;
+			text-align: center;
+			position: relative;
+			top: 50%;
+			transform: translateY(-50%);
 		}
 	</style>
 </head>
