--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 			position: relative;
 			top: 50%;
 			transform: translateY(-50%);
+			color: #fff;
+			box-shadow: 10px 10px 5px #888;
 		}
 	</style>
 </head>
