--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			top: 50%;
 			transform: translateY(-50%);
 			color: #fff;
-			box-shadow: 10px 10px 5px #888;
+			text-shadow: 10px 10px 5px #888;
 		}
 	</style>
 </head>
