--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 			top: 50%;
 			transform: translateY(-50%);
 			color: #fff;
-			text-shadow: 10px 10px 5px #888;
+			text-outline: 1px 1px #888;
+			text-shadow: 5px 5px 5px #888;
 		}
 	</style>
 </head>
