--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<title>welcome </title>
 	<style>
 		h1 {
+			font-size: 70px;
 			text-align: center;
 			position: relative;
 			top: 50%;
 			transform: translateY(-50%);
 			color: #fff;
 			text-outline: 1px 1px #888;
-			text-shadow: 5px 5px 5px #888;
+			text-shadow: 5px 5px 3px #888;
 		}
 	</style>
 </head>
