--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 	<title>welcome </title>
 	<style>
 		h1 {
-			font-size: 70px;
-			text-align: center;
 			position: relative;
 			top: 50%;
 			transform: translateY(-50%);
+			font-size: 70px;
+			text-align: center;
 			color: #fff;
-			text-outline: 1px 1px #888;
-			text-shadow: 5px 5px 3px #888;
+			text-shadow: 4px 4px 15px #333;
 		}
 	</style>
 </head>
 <body>
 	
-	<h1>Welcome!</h1>
+	<h1>Welcome to my world!</h1>
 
 </body>
 </html>
