--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 			position: relative;
 			top: 50%;
 			transform: translateY(-50%);
+			-ms-transform: skew(30deg,20deg);
+			-webkit-transform: skew(30deg,20deg);
 			font-size: 70px;
 			text-align: center;
 			color: #fff;
@@ -13,7 +15,7 @@
 		}
 	</style>
 </head>
-<body>
+<body oncontextmenu="return false;" onselectstart="return false">
 	
 	<h1>Welcome to my world!</h1>
 
