--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 			position: relative;
 			top: 50%;
 			transform: translateY(-50%);
-			-ms-transform: skew(30deg,20deg);
-			-webkit-transform: skew(30deg,20deg);
+			-ms-transform: translateY(-50%);
+			-webkit-transform: translateY(-50%);
 			font-size: 70px;
 			text-align: center;
 			color: #fff;
