--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 	<title>welcome </title>
 	<style>
+		body {
+			background: #000;
+		}
 		h1 {
 			position: relative;
 			top: 50%;
@@ -10,7 +13,7 @@
 			-webkit-transform: translateY(-50%);
 			text-align: center;
 			color: #fff;
-			text-shadow: 4px 4px 15px #333;
+			text-shadow: 4px 4px 15px #0FF;
 		}
 	</style>
 </head>
